salsa-2022-tests/tests/compile-fail/input_struct_id_fields_no_setters.stderr
error[E0599]: no method named `set_id_one` found for struct `MyInput` in the current scope
  --> tests/compile-fail/input_struct_id_fields_no_setters.rs:30:11
   |
8  | struct MyInput {
   |        ------- method `set_id_one` not found for this struct
...
30 |     input.set_id_one(1);
   |           ^^^^^^^^^^
   |
help: there is a method `id_one` with a similar name
   |
30 |     input.id_one(1);
   |           ~~~~~~
